--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="home">
 	
-<h1>Welcome</h1>
+#<h1>Welcome</h1>
 	
 
 {% include image.html url="/images/octojekyll.png" caption="Octojekyll." width=300 align="right" %}
