--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 
 {% include image.html url="/images/octojekyll.png" caption="Octojekyll." width=300 align="right" %}
 
-I am a postdoctoral researcher at the Florida State University.
+I am a postdoctoral researcher at the <a href="https://fsu.edu/">Florida State University</a
 	
 	
 </div>
