--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 <h1>Welcome to my personal website</h1>
 	
 
-{% include image.html url="/images/octojekyll.png" caption="Octojekyll." width=300 align="right" %}
+{% include image.html url="/images/octojekyll.png" caption="mnooranidoost." width=300 align="right" %}
 
 I am a postdoctoral researcher at the <a href="https://fsu.edu/">Florida State University</a
 	
