--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@ layout: default
 
 <div class="home">
 	
-<h1>Welcome to my personal website</h1>
+<h1>Mohammad Nooranidoost</h1>
 	
 
 {% include image.html url="/images/mnooranidoost.jpg" caption="" width=300 align="right" %}
+
+Welcome to my website!
 
 I am a postdoctoral researcher at the Florida State University.
 	
