--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ layout: default
 {% include image.html url="/images/mnooranidoost.jpg" caption="" width=300 align="right" %}
 
 Welcome to my website!
+\\
+I am currently postdoctoral fellow in the department of Mathematics at at the Florida State University,
+working jointly with Professors M. Yousuff Hussaini and Nick Cogan.
 
-I am a postdoctoral researcher at the Florida State University.
 	
 </div>
