--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@ layout: default
 
 {% include image.html url="/images/mnooranidoost.jpg" caption="" width=300 align="right" %}
 
-Welcome to my website!
-//
-I am currently postdoctoral fellow in the department of Mathematics at at the Florida State University,
-working jointly with Professors M. Yousuff Hussaini and Nick Cogan.
+<p> Welcome to my website! </p>
+
+<p> I am currently postdoctoral fellow in the department of Mathematics at at the Florida State University,
+working jointly with Professors M. Yousuff Hussaini and Nick Cogan. </p>
+
+<p> IPrior to this I completed my PhD in mechanical engineering from UCF. </p>
 
 	
 </div>
