--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ layout: default
 <p> Welcome to my website! </p>
 
 <p> I am currently postdoctoral fellow in the department of Mathematics at at the Florida State University,
-working jointly with Professors M. Yousuff Hussaini and Nick Cogan. </p>
+working jointly with Professors M. Yousuff Hussaini and Nick Cogan <a href="https://www.nsf.gov/">National Science Foundation</a>. </p>
 
-<p> IPrior to this I completed my PhD in mechanical engineering from UCF. </p>
+<p> Prior to this I completed my PhD in mechanical engineering from UCF. </p>
 
 	
 </div>
