--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 <p> Welcome to my website! </p>
 
 <p> I am currently postdoctoral fellow in the department of Mathematics at at the Florida State University,
-working jointly with Professors M. Yousuff Hussaini and Nick Cogan <a href="https://www.nsf.gov/">National Science Foundation</a>. </p>
+working jointly with Professors  <a href="https://www.cespr.fsu.edu/">M. Yousuff Hussaini</a>  and <a href="https://www.math.fsu.edu/~cogan/">Nick Cogan</a>. </p>
 
 <p> Prior to this I completed my PhD in mechanical engineering from UCF. </p>
 
