--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 
 <p> Welcome to my website! </p>
 
-<p> I am currently postdoctoral fellow in the department of Mathematics at at the Florida State University,
+<p> I am currently postdoctoral fellow in the <a href="https://www.math.fsu.edu/">department of Mathematics</a> at the <a href="https://www.fsu.edu/">Florida State University</a>,
 working jointly with Professors  <a href="https://www.cespr.fsu.edu/">M. Yousuff Hussaini</a>  and <a href="https://www.math.fsu.edu/~cogan/">Nick Cogan</a>. </p>
 
 <p> Prior to this I completed my PhD in mechanical engineering from UCF. </p>
