--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ layout: default
 <p> I am currently postdoctoral fellow in the <a href="https://www.math.fsu.edu/">department of Mathematics</a> at the <a href="https://www.fsu.edu/">Florida State University</a>,
 working jointly with Professors  <a href="https://www.cespr.fsu.edu/">M. Yousuff Hussaini</a>  and <a href="https://www.math.fsu.edu/~cogan/">Nick Cogan</a>. </p>
 
-<p> Prior to this I completed my PhD in mechanical engineering from UCF. </p>
+<p> Prior to this, I completed my PhD in mechanical engineering from UCF, undersuprvision of <a href="https://www.cecs.ucf.edu/faculty/ranganathan-kumar/">
+Dr. Ranganathan Kumar</a>. </p>
 
 	
 </div>
