--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@ layout: default
 
 <p> Welcome to my website! </p>
 
-<p> I am currently postdoctoral fellow in the <a href="https://www.math.fsu.edu/">department of Mathematics</a> at the <a href="https://www.fsu.edu/">Florida State University</a>,
+<p> I am a postdoctoral fellow in the <a href="https://www.math.fsu.edu/">department of Mathematics</a> at the <a href="https://www.fsu.edu/">Florida State University</a>,
 working jointly with <a href="https://www.cespr.fsu.edu/">Dr. M. Yousuff Hussaini</a>  and <a href="https://www.math.fsu.edu/~cogan/">Dr. Nick Cogan</a>. </p>
 
 <p> Prior to this, I completed my PhD in mechanical engineering from <a href="https://www.ucf.edu/"> University of Central Florida</a>, under suprvision of <a href="https://www.cecs.ucf.edu/faculty/ranganathan-kumar/">
 Dr. Ranganathan Kumar</a>. </p>. I also received my Master's degree in Mechanical Engineering from  <a href="https://www.ku.edu.tr/en/">Koc University</a>, where I started my academic career on modeling rheological and biological systems.
 
-	
-	My current research focuses on mathematical modeling and uncertainty quantification of biofilm models. In this interdisciplinary research, we proposed a 
-	mathematical framework that describes the viscoelastic behavior of the biofilm polymeric matrix. Using Bayesian estimation techniques, we aim to estimate
-	the viscoelastic properties of biofilm matrix at different stages of their formation.    
+My current research focuses on mathematical modeling and uncertainty quantification of biofilm models. In this interdisciplinary research, we proposed a 
+mathematical framework that describes the viscoelastic behavior of the biofilm polymeric matrix. Using Bayesian estimation techniques, we aim to estimate
+the viscoelastic properties of biofilm matrix at different stages of their formation.    
 	
 </div>
