--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ working jointly with <a href="https://www.cespr.fsu.edu/">Dr. M. Yousuff Hussain
 Dr. Ranganathan Kumar</a>. I received my Master's degree in Mechanical Engineering from  <a href="https://www.ku.edu.tr/en/">Koc University</a>, where I started
 my academic career on modeling rheological and biological systems. </p> 
 
-My current research focuses on mathematical modeling and uncertainty quantification of biofilm models. In this interdisciplinary research, we proposed a 
+<p>My current research focuses on mathematical modeling and uncertainty quantification of biofilm models. In this interdisciplinary research, we proposed a 
 mathematical framework that describes the viscoelastic behavior of the biofilm polymeric matrix. Using Bayesian estimation techniques, we aim to estimate
-the viscoelastic properties of biofilm matrix at different stages of their formation.    
+the viscoelastic properties of biofilm matrix at different stages of their formation.  </p>    
 	
 </div>
